[gd_scene load_steps=11 format=1]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://art/starfield.png" type="Texture" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/ken_future_42.fnt" type="BitmapFont" id=4]
[ext_resource path="res://art/green_button01.png" type="Texture" id=5]
[ext_resource path="res://audio/sfx_exp_short_hard12.wav" type="Sample" id=6]
[ext_resource path="res://audio/sfx_exp_short_hard16.wav" type="Sample" id=7]
[ext_resource path="res://audio/sfx_exp_shortest_hard1.wav" type="Sample" id=8]
[ext_resource path="res://audio/SimpleBeat.ogg" type="AudioStream" id=9]

[sub_resource type="SampleLibrary" id=1]

samples/sfx_exp_short_hard12 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 6 ) }
samples/sfx_exp_short_hard16 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 7 ) }
samples/sfx_exp_shortest_hard1 = { "db":0.0, "pitch":1.0, "sample":ExtResource( 8 ) }

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "_edit_group_":true }

[node name="background" type="Sprite" parent="."]

transform/scale = Vector2( 1.28386, 1.28386 )
texture = ExtResource( 2 )
centered = false

[node name="player" parent="." instance=ExtResource( 3 )]

[node name="bullet_container" type="Node2D" parent="."]

[node name="meteor_container" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="score" type="Label" parent="HUD"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 25.0
margin/right = -200.0
margin/bottom = 100.0
custom_fonts/font = ExtResource( 4 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shield_indicator" type="TextureProgress" parent="HUD"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 25.0
margin/right = 265.0
margin/bottom = 70.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 10.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 5 )
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="explosion_sounds" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = true
stream/volume_db = 5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500


